add retry vpc and wait for gw

--- a/scaleway/testdata/vpc-private-network-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-private-network-basic.cassette.yaml
@@ -13,16 +13,16 @@ interactions:
     url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks
     method: POST
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:34.565787Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"message":"internal error"}'
     headers:
       Content-Length:
-      - "298"
+      - "28"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:34 GMT
+      - Wed, 08 Dec 2021 14:27:59 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,77 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f2e7a7c3-8e07-4cde-a015-efdb39c5653a
+      - 337f7d4d-d7b7-44a3-bcdc-6aa459d01296
+    status: 500 Internal Server Error
+    code: 500
+    duration: ""
+- request:
+    body: '{"name":"private-network-test","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","tags":[]}'
+    form: {}
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks
+    method: POST
+  response:
+    body: '{"message":"internal error"}'
+    headers:
+      Content-Length:
+      - "28"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 08 Dec 2021 14:28:01 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 9f28af88-cef9-4ccc-8d15-e1082122af8f
+    status: 500 Internal Server Error
+    code: 500
+    duration: ""
+- request:
+    body: '{"name":"private-network-test","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","tags":[]}'
+    form: {}
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks
+    method: POST
+  response:
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:05.707895Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "298"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 08 Dec 2021 14:28:05 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 0608fee5-fa93-414f-80fc-3cd99c0337a2
     status: 200 OK
     code: 200
     duration: ""
@@ -43,10 +113,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:34.565787Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:05.707895Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -55,7 +125,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:34 GMT
+      - Wed, 08 Dec 2021 14:28:05 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +135,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 34566b5e-89d7-4a7e-ab4b-f5304160149b
+      - 7836682d-9197-44f5-8650-de59a4d492ec
     status: 200 OK
     code: 200
     duration: ""
@@ -76,10 +146,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:34.565787Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:05.707895Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -88,7 +158,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:34 GMT
+      - Wed, 08 Dec 2021 14:28:06 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +168,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 48942d24-6295-4815-800e-45ace906f704
+      - 5eed6c69-85b9-4553-83ef-5d93651b1c86
     status: 200 OK
     code: 200
     duration: ""
@@ -109,10 +179,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:34.565787Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:05.707895Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -121,7 +191,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:35 GMT
+      - Wed, 08 Dec 2021 14:28:06 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +201,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2fa692bc-c053-481a-b071-73a50d153839
+      - aa872ada-fe3a-4e34-bec0-4fe61b518f1d
     status: 200 OK
     code: 200
     duration: ""
@@ -142,10 +212,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:34.565787Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:05.707895Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -154,7 +224,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:36 GMT
+      - Wed, 08 Dec 2021 14:28:07 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -164,7 +234,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b8b006b1-eb56-4f6e-bb33-7b47e8de5ae9
+      - acb082ba-71a8-497a-8c50-b376662d6f7e
     status: 200 OK
     code: 200
     duration: ""
@@ -177,10 +247,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: PATCH
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:36.561953Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:08.336954Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -189,7 +259,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:36 GMT
+      - Wed, 08 Dec 2021 14:28:08 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -199,7 +269,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1243bf82-02fd-433e-b1fd-d854f68af3f0
+      - 0eefff0d-e4c1-48ab-a273-85c4c6d49f83
     status: 200 OK
     code: 200
     duration: ""
@@ -210,10 +280,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:36.561953Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:08.336954Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -222,7 +292,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:36 GMT
+      - Wed, 08 Dec 2021 14:28:08 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -232,7 +302,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - cc40a071-d2b8-47f5-ab8f-3962895133cb
+      - c9d848cb-046a-4f30-a8d6-68f9d372d86a
     status: 200 OK
     code: 200
     duration: ""
@@ -243,10 +313,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:36.561953Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:08.336954Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -255,7 +325,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:36 GMT
+      - Wed, 08 Dec 2021 14:28:08 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -265,7 +335,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b8a21954-3529-4746-a982-b2fdfeef4665
+      - 2c1da438-898d-477f-ba36-dec80a8a4a63
     status: 200 OK
     code: 200
     duration: ""
@@ -276,10 +346,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
-    body: '{"id":"dc63bc10-ed20-4d6f-bd4d-7921351504bd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T13:09:34.565787Z","updated_at":"2021-12-08T13:09:36.561953Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    body: '{"id":"0c5fe020-bea6-42f1-83d7-525b84ea9ac1","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-08T14:28:05.707895Z","updated_at":"2021-12-08T14:28:08.336954Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -288,7 +358,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:37 GMT
+      - Wed, 08 Dec 2021 14:28:09 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -298,7 +368,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 359505c0-75b1-4052-8b0e-8bb14cad2f77
+      - b03d54e1-72a6-4955-bf79-e0a9c24d15c9
     status: 200 OK
     code: 200
     duration: ""
@@ -309,7 +379,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: DELETE
   response:
     body: ""
@@ -319,7 +389,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:38 GMT
+      - Wed, 08 Dec 2021 14:28:10 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -329,7 +399,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 0ad30eb1-9e0b-4820-87fe-44279438800e
+      - a2875f09-8626-467c-bb8b-e4d0fccbc108
     status: 204 No Content
     code: 204
     duration: ""
@@ -340,7 +410,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/dc63bc10-ed20-4d6f-bd4d-7921351504bd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/0c5fe020-bea6-42f1-83d7-525b84ea9ac1
     method: GET
   response:
     body: '{"message":"resource is not found","resource":"unknown","resource_id":"","type":"not_found"}'
@@ -352,7 +422,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 08 Dec 2021 13:09:38 GMT
+      - Wed, 08 Dec 2021 14:28:10 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -362,7 +432,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a64aac75-43f6-48f5-a672-5fc05811b5c6
+      - d8062b8f-abd2-48a0-9608-d4b97284f729
     status: 404 Not Found
     code: 404
     duration: ""
