fix(vpc): retry request context

--- a/scaleway/testdata/k8s-cluster-pool-wait.cassette.yaml
+++ b/scaleway/testdata/k8s-cluster-pool-wait.cassette.yaml
@@ -5207,7 +5207,7 @@ interactions:
     body: '{"region":"fr-par","id":"13d550de-9d49-4036-bb60-6b04a3130653","cluster_id":"e2ce45e7-fe8a-4807-b418-81795615d803","created_at":"2021-12-15T13:40:04.444980Z","updated_at":"2021-12-15T13:45:56.114009Z","name":"minimal","status":"ready","version":"1.23.0","node_type":"gp1_xs","autoscaling":false,"size":2,"min_size":1,"max_size":2,"container_runtime":"containerd","autohealing":false,"tags":[],"placement_group_id":null,"kubelet_args":{},"upgrade_policy":{"max_unavailable":1,"max_surge":0},"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "508"
+      - "510"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -5339,7 +5339,7 @@ interactions:
     body: '{"region":"fr-par","id":"cbb7643f-6e13-4ff3-a80c-0be3014f638f","cluster_id":"e2ce45e7-fe8a-4807-b418-81795615d803","created_at":"2021-12-15T13:35:57.095857Z","updated_at":"2021-12-15T13:39:58.530760Z","name":"default","status":"ready","version":"1.23.0","node_type":"gp1_xs","autoscaling":false,"size":1,"min_size":1,"max_size":1,"container_runtime":"containerd","autohealing":false,"tags":[],"placement_group_id":null,"kubelet_args":{},"upgrade_policy":{"max_unavailable":1,"max_surge":0},"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "508"
+      - "1320"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -5438,7 +5438,7 @@ interactions:
     body: '{"region":"fr-par","id":"e2ce45e7-fe8a-4807-b418-81795615d803","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-15T13:35:51.550648Z","updated_at":"2021-12-15T13:36:50.875718Z","type":"kapsule","name":"PoolConfigWait","description":"","status":"ready","version":"1.23.0","cni":"calico","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"cluster_url":"https://e2ce45e7-fe8a-4807-b418-81795615d803.api.k8s.fr-par.scw.cloud:6443","dns_wildcard":"*.e2ce45e7-fe8a-4807-b418-81795615d803.nodes.k8s.fr-par.scw.cloud","autoscaler_config":{"scale_down_disabled":false,"scale_down_delay_after_add":"10m","estimator":"binpacking","expander":"random","ignore_daemonsets_utilization":false,"balance_similar_node_groups":false,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":"10m","scale_down_utilization_threshold":0.5,"max_graceful_termination_sec":0},"dashboard_enabled":false,"ingress":"none","auto_upgrade":{"enabled":false,"maintenance_window":{"start_hour":0,"day":"any"}},"upgrade_available":false,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":{"issuer_url":"","client_id":"","username_claim":"","username_prefix":"","groups_claim":[],"groups_prefix":"","required_claim":[]},"apiserver_cert_sans":[]}'
     headers:
       Content-Length:
-      - "508"
+      - "2604"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -5869,7 +5869,7 @@ interactions:
     body: '{"region":"fr-par","id":"13d550de-9d49-4036-bb60-6b04a3130653","cluster_id":"e2ce45e7-fe8a-4807-b418-81795615d803","created_at":"2021-12-15T13:40:04.444980Z","updated_at":"2021-12-15T13:46:02.551261Z","name":"minimal","status":"scaling","version":"1.23.0","node_type":"gp1_xs","autoscaling":false,"size":1,"min_size":1,"max_size":1,"container_runtime":"containerd","autohealing":false,"tags":[],"placement_group_id":null,"kubelet_args":{},"upgrade_policy":{"max_unavailable":1,"max_surge":0},"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "510"
+      - "587"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -5890,7 +5890,7 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"autoscaling":null,"size":1,"min_size":null,"max_size":1,"autohealing":null,"tags":null,"kubelet_args":null,"upgrade_policy":{"max_unavailable":null,"max_surge":null}}'
     form: {}
     headers:
       User-Agent:
