--- a/scaleway/testdata/data-source-k8s-pool-basic.cassette.yaml
+++ b/scaleway/testdata/data-source-k8s-pool-basic.cassette.yaml
@@ -1671,10 +1671,10 @@ interactions:
     url: https://api.scaleway.com/k8s/v1/regions/fr-par/clusters/7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be/nodes?order_by=created_at_asc&page=1&pool_id=a0698de1-7396-471c-959a-8a10f2075e00&status=unknown
     method: GET
   response:
-    body: '{"total_count":0,"nodes":[]}'
+    body: '{"total_count":1,"nodes":[{"region":"fr-par","id":"a4e9724c-5bcc-45a0-b5ef-1277f0edd9f1","cluster_id":"dede8d0f-ee75-46cb-96a1-ea72370e660f","created_at":"2021-12-13T16:33:32.808866Z","updated_at":"2021-12-13T16:33:32.808866Z","pool_id":"5d74ab5e-3fa6-4eb6-83cc-7bf53069ee4d","status":"creating","conditions":{"Creating":"True","Ready":"False"},"name":"scw-tf-cluster-pool-tf-pool-a4e9724c5bcc45a0b5","public_ip_v4":"","public_ip_v6":null}]}'
     headers:
       Content-Length:
-      - "28"
+      - "441"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1836,10 +1836,10 @@ interactions:
     url: https://api.scaleway.com/k8s/v1/regions/fr-par/clusters/7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be/nodes?order_by=created_at_asc&page=1&pool_id=a0698de1-7396-471c-959a-8a10f2075e00&status=unknown
     method: GET
   response:
-    body: '{"total_count":0,"nodes":[]}'
+    body: '{"region":"fr-par","id":"5d74ab5e-3fa6-4eb6-83cc-7bf53069ee4d","cluster_id":"dede8d0f-ee75-46cb-96a1-ea72370e660f","created_at":"2021-12-13T16:31:32.186328Z","updated_at":"2021-12-13T16:31:32.195361Z","name":"tf-pool","status":"scaling","version":"1.23.0","node_type":"dev1_m","autoscaling":false,"size":1,"min_size":1,"max_size":1,"container_runtime":"containerd","autohealing":false,"tags":["terraform-test","data_scaleway_k8s_pool","basic"],"placement_group_id":null,"kubelet_args":{},"upgrade_policy":{"max_unavailable":1,"max_surge":0},"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "28"
+      - "559"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1872,7 +1872,7 @@ interactions:
     body: '{"region":"fr-par","id":"a0698de1-7396-471c-959a-8a10f2075e00","cluster_id":"7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be","created_at":"2021-12-15T13:36:06.846295Z","updated_at":"2021-12-15T13:36:06.856454Z","name":"tf-pool","status":"scaling","version":"1.23.0","node_type":"dev1_m","autoscaling":false,"size":1,"min_size":1,"max_size":1,"container_runtime":"containerd","autohealing":false,"tags":["terraform-test","data_scaleway_k8s_pool","basic"],"placement_group_id":null,"kubelet_args":{},"upgrade_policy":{"max_unavailable":1,"max_surge":0},"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "559"
+      - "441"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1902,10 +1902,10 @@ interactions:
     url: https://api.scaleway.com/k8s/v1/regions/fr-par/clusters/7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be/nodes?order_by=created_at_asc&page=1&pool_id=a0698de1-7396-471c-959a-8a10f2075e00&status=unknown
     method: GET
   response:
-    body: '{"total_count":0,"nodes":[]}'
+    body: '{"total_count":1,"nodes":[{"region":"fr-par","id":"a4e9724c-5bcc-45a0-b5ef-1277f0edd9f1","cluster_id":"dede8d0f-ee75-46cb-96a1-ea72370e660f","created_at":"2021-12-13T16:33:32.808866Z","updated_at":"2021-12-13T16:33:32.808866Z","pool_id":"5d74ab5e-3fa6-4eb6-83cc-7bf53069ee4d","status":"creating","conditions":{"Creating":"True","Ready":"False"},"name":"scw-tf-cluster-pool-tf-pool-a4e9724c5bcc45a0b5","public_ip_v4":"","public_ip_v6":null}]}'
     headers:
       Content-Length:
-      - "28"
+      - "441"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -2034,10 +2034,10 @@ interactions:
     url: https://api.scaleway.com/k8s/v1/regions/fr-par/clusters/7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be/nodes?order_by=created_at_asc&page=1&pool_id=a0698de1-7396-471c-959a-8a10f2075e00&status=unknown
     method: GET
   response:
-    body: '{"total_count":0,"nodes":[]}'
+    body: '{"total_count":1,"nodes":[{"region":"fr-par","id":"a4e9724c-5bcc-45a0-b5ef-1277f0edd9f1","cluster_id":"dede8d0f-ee75-46cb-96a1-ea72370e660f","created_at":"2021-12-13T16:33:32.808866Z","updated_at":"2021-12-13T16:33:32.808866Z","pool_id":"5d74ab5e-3fa6-4eb6-83cc-7bf53069ee4d","status":"creating","conditions":{"Creating":"True","Ready":"False"},"name":"scw-tf-cluster-pool-tf-pool-a4e9724c5bcc45a0b5","public_ip_v4":"","public_ip_v6":null}]}'
     headers:
       Content-Length:
-      - "28"
+      - "441"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -2199,10 +2199,10 @@ interactions:
     url: https://api.scaleway.com/k8s/v1/regions/fr-par/clusters/7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be/nodes?order_by=created_at_asc&page=1&pool_id=a0698de1-7396-471c-959a-8a10f2075e00&status=unknown
     method: GET
   response:
-    body: '{"total_count":0,"nodes":[]}'
+    body: '{"total_count":1,"nodes":[{"region":"fr-par","id":"a4e9724c-5bcc-45a0-b5ef-1277f0edd9f1","cluster_id":"dede8d0f-ee75-46cb-96a1-ea72370e660f","created_at":"2021-12-13T16:33:32.808866Z","updated_at":"2021-12-13T16:33:32.808866Z","pool_id":"5d74ab5e-3fa6-4eb6-83cc-7bf53069ee4d","status":"creating","conditions":{"Creating":"True","Ready":"False"},"name":"scw-tf-cluster-pool-tf-pool-a4e9724c5bcc45a0b5","public_ip_v4":"","public_ip_v6":null}]}'
     headers:
       Content-Length:
-      - "28"
+      - "441"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -2364,10 +2364,10 @@ interactions:
     url: https://api.scaleway.com/k8s/v1/regions/fr-par/clusters/7ffe4ef9-6fd5-4db2-b7e1-55b65c0b77be/nodes?order_by=created_at_asc&page=1&pool_id=a0698de1-7396-471c-959a-8a10f2075e00&status=unknown
     method: GET
   response:
-    body: '{"total_count":0,"nodes":[]}'
+    body: '{"total_count":1,"nodes":[{"region":"fr-par","id":"a4e9724c-5bcc-45a0-b5ef-1277f0edd9f1","cluster_id":"dede8d0f-ee75-46cb-96a1-ea72370e660f","created_at":"2021-12-13T16:33:32.808866Z","updated_at":"2021-12-13T16:33:32.808866Z","pool_id":"5d74ab5e-3fa6-4eb6-83cc-7bf53069ee4d","status":"creating","conditions":{"Creating":"True","Ready":"False"},"name":"scw-tf-cluster-pool-tf-pool-a4e9724c5bcc45a0b5","public_ip_v4":"","public_ip_v6":null}]}'
     headers:
       Content-Length:
-      - "28"
+      - "441"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
