--- a/scaleway/testdata/k8s-cluster-pool-basic.cassette.yaml
+++ b/scaleway/testdata/k8s-cluster-pool-basic.cassette.yaml
@@ -119,7 +119,7 @@ interactions:
     body: '{"region":"fr-par","id":"41e0ee52-5f80-4772-bf6f-6b20411133de","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-15T13:34:57.126638Z","updated_at":"2021-12-15T13:35:00.514930Z","type":"kapsule","name":"K8SPoolConfigMinimal","description":"","status":"pool_required","version":"1.23.0","cni":"calico","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"cluster_url":"https://41e0ee52-5f80-4772-bf6f-6b20411133de.api.k8s.fr-par.scw.cloud:6443","dns_wildcard":"*.41e0ee52-5f80-4772-bf6f-6b20411133de.nodes.k8s.fr-par.scw.cloud","autoscaler_config":{"scale_down_disabled":false,"scale_down_delay_after_add":"10m","estimator":"binpacking","expander":"random","ignore_daemonsets_utilization":false,"balance_similar_node_groups":false,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":"10m","scale_down_utilization_threshold":0.5,"max_graceful_termination_sec":0},"dashboard_enabled":false,"ingress":"none","auto_upgrade":{"enabled":false,"maintenance_window":{"start_hour":0,"day":"any"}},"upgrade_available":false,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":{"issuer_url":"","client_id":"","username_claim":"","username_prefix":"","groups_claim":[],"groups_prefix":"","required_claim":[]},"apiserver_cert_sans":[]}'
     headers:
       Content-Length:
-      - "1334"
+      - "1329"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -418,7 +418,7 @@ interactions:
     body: '{"region":"fr-par","id":"41e0ee52-5f80-4772-bf6f-6b20411133de","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-15T13:34:57.126638Z","updated_at":"2021-12-15T13:35:05.506247Z","type":"kapsule","name":"K8SPoolConfigMinimal","description":"","status":"creating","version":"1.23.0","cni":"calico","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"cluster_url":"https://41e0ee52-5f80-4772-bf6f-6b20411133de.api.k8s.fr-par.scw.cloud:6443","dns_wildcard":"*.41e0ee52-5f80-4772-bf6f-6b20411133de.nodes.k8s.fr-par.scw.cloud","autoscaler_config":{"scale_down_disabled":false,"scale_down_delay_after_add":"10m","estimator":"binpacking","expander":"random","ignore_daemonsets_utilization":false,"balance_similar_node_groups":false,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":"10m","scale_down_utilization_threshold":0.5,"max_graceful_termination_sec":0},"dashboard_enabled":false,"ingress":"none","auto_upgrade":{"enabled":false,"maintenance_window":{"start_hour":0,"day":"any"}},"upgrade_available":false,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":{"issuer_url":"","client_id":"","username_claim":"","username_prefix":"","groups_claim":[],"groups_prefix":"","required_claim":[]},"apiserver_cert_sans":[]}'
     headers:
       Content-Length:
-      - "1329"
+      - "2652"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -451,7 +451,7 @@ interactions:
     body: '{"region":"fr-par","id":"41e0ee52-5f80-4772-bf6f-6b20411133de","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-15T13:34:57.126638Z","updated_at":"2021-12-15T13:35:05.506247Z","type":"kapsule","name":"K8SPoolConfigMinimal","description":"","status":"creating","version":"1.23.0","cni":"calico","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"cluster_url":"https://41e0ee52-5f80-4772-bf6f-6b20411133de.api.k8s.fr-par.scw.cloud:6443","dns_wildcard":"*.41e0ee52-5f80-4772-bf6f-6b20411133de.nodes.k8s.fr-par.scw.cloud","autoscaler_config":{"scale_down_disabled":false,"scale_down_delay_after_add":"10m","estimator":"binpacking","expander":"random","ignore_daemonsets_utilization":false,"balance_similar_node_groups":false,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":"10m","scale_down_utilization_threshold":0.5,"max_graceful_termination_sec":0},"dashboard_enabled":false,"ingress":"none","auto_upgrade":{"enabled":false,"maintenance_window":{"start_hour":0,"day":"any"}},"upgrade_available":false,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":{"issuer_url":"","client_id":"","username_claim":"","username_prefix":"","groups_claim":[],"groups_prefix":"","required_claim":[]},"apiserver_cert_sans":[]}'
     headers:
       Content-Length:
-      - "1329"
+      - "1334"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -472,7 +472,7 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"name":"default","node_type":"gp1_xs","placement_group_id":null,"autoscaling":true,"size":1,"min_size":1,"max_size":1,"container_runtime":"containerd","autohealing":true,"tags":["terraform-test","scaleway_k8s_cluster","default"],"kubelet_args":{},"upgrade_policy":null,"zone":"fr-par-1"}'
     form: {}
     headers:
       User-Agent:
@@ -517,7 +517,7 @@ interactions:
     body: '{"region":"fr-par","id":"41e0ee52-5f80-4772-bf6f-6b20411133de","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-15T13:34:57.126638Z","updated_at":"2021-12-15T13:35:05.506247Z","type":"kapsule","name":"K8SPoolConfigMinimal","description":"","status":"creating","version":"1.23.0","cni":"calico","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"cluster_url":"https://41e0ee52-5f80-4772-bf6f-6b20411133de.api.k8s.fr-par.scw.cloud:6443","dns_wildcard":"*.41e0ee52-5f80-4772-bf6f-6b20411133de.nodes.k8s.fr-par.scw.cloud","autoscaler_config":{"scale_down_disabled":false,"scale_down_delay_after_add":"10m","estimator":"binpacking","expander":"random","ignore_daemonsets_utilization":false,"balance_similar_node_groups":false,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":"10m","scale_down_utilization_threshold":0.5,"max_graceful_termination_sec":0},"dashboard_enabled":false,"ingress":"none","auto_upgrade":{"enabled":false,"maintenance_window":{"start_hour":0,"day":"any"}},"upgrade_available":false,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":{"issuer_url":"","client_id":"","username_claim":"","username_prefix":"","groups_claim":[],"groups_prefix":"","required_claim":[]},"apiserver_cert_sans":[]}'
     headers:
       Content-Length:
-      - "1329"
+      - "560"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1641,7 +1641,7 @@ interactions:
     body: '{"region":"fr-par","id":"57d3097f-999a-4571-be71-d94b779539cc","cluster_id":"41e0ee52-5f80-4772-bf6f-6b20411133de","created_at":"2021-12-15T13:36:28.936627Z","updated_at":"2021-12-15T13:36:28.944416Z","name":"minimal","status":"scaling","version":"1.23.0","node_type":"gp1_xs","autoscaling":true,"size":1,"min_size":1,"max_size":1,"container_runtime":"containerd","autohealing":true,"tags":["terraform-test","scaleway_k8s_cluster","minimal"],"placement_group_id":null,"kubelet_args":{},"upgrade_policy":{"max_unavailable":1,"max_surge":0},"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "557"
+      - "1326"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -1674,7 +1674,7 @@ interactions:
     body: '{"region":"fr-par","id":"41e0ee52-5f80-4772-bf6f-6b20411133de","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-15T13:34:57.126638Z","updated_at":"2021-12-15T13:36:24.331568Z","type":"kapsule","name":"K8SPoolConfigMinimal","description":"","status":"ready","version":"1.23.0","cni":"calico","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"cluster_url":"https://41e0ee52-5f80-4772-bf6f-6b20411133de.api.k8s.fr-par.scw.cloud:6443","dns_wildcard":"*.41e0ee52-5f80-4772-bf6f-6b20411133de.nodes.k8s.fr-par.scw.cloud","autoscaler_config":{"scale_down_disabled":false,"scale_down_delay_after_add":"10m","estimator":"binpacking","expander":"random","ignore_daemonsets_utilization":false,"balance_similar_node_groups":false,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":"10m","scale_down_utilization_threshold":0.5,"max_graceful_termination_sec":0},"dashboard_enabled":false,"ingress":"none","auto_upgrade":{"enabled":false,"maintenance_window":{"start_hour":0,"day":"any"}},"upgrade_available":false,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":{"issuer_url":"","client_id":"","username_claim":"","username_prefix":"","groups_claim":[],"groups_prefix":"","required_claim":[]},"apiserver_cert_sans":[]}'
     headers:
       Content-Length:
-      - "1326"
+      - "557"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
