--- a/scaleway/testdata/vpc-private-network-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-private-network-basic.cassette.yaml
@@ -2,27 +2,27 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"private-network-test","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","tags":[]}'
+    body: '{"name":"private-network-test","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","tags":[]}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks
     method: POST
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":[],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:24.734952Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"message":"internal error"}'
     headers:
       Content-Length:
-      - "298"
+      - "28"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:24 GMT
+      - Tue, 14 Dec 2021 15:11:44 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,42 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 51c65b84-536d-42ad-b835-f6996486a0bb
+      - 2027c237-1893-4b3e-ae4f-68c4cd65d4b9
+    status: 500 Internal Server Error
+    code: 500
+    duration: ""
+- request:
+    body: '{"name":"private-network-test","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","tags":[]}'
+    form: {}
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks
+    method: POST
+  response:
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:46.289859Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "298"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Tue, 14 Dec 2021 15:11:46 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 89099f03-cbca-4213-b12d-da05c6258b49
     status: 200 OK
     code: 200
     duration: ""
@@ -41,12 +76,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":[],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:24.734952Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:46.289859Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -55,7 +90,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:24 GMT
+      - Tue, 14 Dec 2021 15:11:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +100,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 6fa10f24-2053-4049-8d05-07e0bc098fcd
+      - 867f2203-64b6-46da-bf00-210e0e1cfa80
     status: 200 OK
     code: 200
     duration: ""
@@ -74,12 +109,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":[],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:24.734952Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:46.289859Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -88,7 +123,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:25 GMT
+      - Tue, 14 Dec 2021 15:11:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +133,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9bd699f4-0a7d-4ee1-9655-f163cc3f3fc5
+      - 3b75ac1a-56e6-4f10-984d-fc947430e304
     status: 200 OK
     code: 200
     duration: ""
@@ -107,12 +142,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":[],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:24.734952Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:46.289859Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -121,7 +156,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:25 GMT
+      - Tue, 14 Dec 2021 15:11:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +166,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 62349dbd-3d5a-4835-a9c1-06bef4cc0b91
+      - 178b0557-bfdb-4b85-b2c7-8c930b089fec
     status: 200 OK
     code: 200
     duration: ""
@@ -140,12 +175,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":[],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:24.734952Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":[],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:46.289859Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "298"
@@ -154,7 +189,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:26 GMT
+      - Tue, 14 Dec 2021 15:11:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -164,7 +199,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - c9bc17c8-b337-4915-96dc-1635fd287f9e
+      - d9c39acb-a6ec-4dbf-a3a1-7726b135d013
     status: 200 OK
     code: 200
     duration: ""
@@ -175,12 +210,12 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: PATCH
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:26.554688Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:47.933540Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -189,7 +224,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:26 GMT
+      - Tue, 14 Dec 2021 15:11:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -199,7 +234,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ece0bb25-3f04-44dc-af88-210c31fbf0fd
+      - 5ccd4067-0985-4ffb-b7a9-67449609fa65
     status: 200 OK
     code: 200
     duration: ""
@@ -208,12 +243,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:26.554688Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:47.933540Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -222,7 +257,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:26 GMT
+      - Tue, 14 Dec 2021 15:11:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -232,7 +267,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - c15232dd-bb71-4224-9415-239504e53a76
+      - 3a93e9f6-9e51-4f94-9873-29cc229c1127
     status: 200 OK
     code: 200
     duration: ""
@@ -241,12 +276,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:26.554688Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:47.933540Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -255,7 +290,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:26 GMT
+      - Tue, 14 Dec 2021 15:11:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -265,7 +300,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3bb8de43-981b-4ba9-9190-888bf9e278b5
+      - 80df8d62-a1e6-41e2-a1a0-ebf5ac65123f
     status: 200 OK
     code: 200
     duration: ""
@@ -274,12 +309,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
-    body: '{"id":"84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","created_at":"2021-10-13T15:04:24.734952Z","updated_at":"2021-10-13T15:04:26.554688Z","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","zone":"fr-par-1"}'
+    body: '{"id":"85334a93-2a41-4f98-9896-a3224556f0a0","name":"private-network-test","tags":["tag0","tag1"],"organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2021-12-14T15:11:46.289859Z","updated_at":"2021-12-14T15:11:47.933540Z","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "311"
@@ -288,7 +323,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:27 GMT
+      - Tue, 14 Dec 2021 15:11:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -298,7 +333,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 609887b2-fd1b-4789-ad5e-15faafd7aa6a
+      - 981252a4-3afb-4cb7-b854-279f9900be79
     status: 200 OK
     code: 200
     duration: ""
@@ -307,9 +342,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: DELETE
   response:
     body: ""
@@ -319,7 +354,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:28 GMT
+      - Tue, 14 Dec 2021 15:11:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -329,7 +364,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 94e06cbf-6439-4cf2-bcb3-7b5632e2ede5
+      - cc4638a6-6c35-4ddf-b6b5-8a703bbb079d
     status: 204 No Content
     code: 204
     duration: ""
@@ -338,9 +373,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.1; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/84ae4429-c00b-4d3c-89a5-b4f2d1ba28dd
+    url: https://api.scaleway.com/vpc/v1/zones/fr-par-1/private-networks/85334a93-2a41-4f98-9896-a3224556f0a0
     method: GET
   response:
     body: '{"message":"resource is not found","resource":"unknown","resource_id":"","type":"not_found"}'
@@ -352,7 +387,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 13 Oct 2021 15:04:32 GMT
+      - Tue, 14 Dec 2021 15:11:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -362,7 +397,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 08841d96-2487-48df-8d6d-dcd4d28591ae
+      - 76cbd9a5-b4c2-41bc-8aa2-65dc0dc6c859
     status: 404 Not Found
     code: 404
     duration: ""
