Enabled ci test on all domain product not only domainrecord

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -12,7 +12,7 @@ jobs:
           - Account
           - AppleSilicon
           - Baremetal
-          - DomainRecord
+          - Domain
           - Instance
           - Iot
           - K8S
