feat(k8s): add new queries and test queries

--- a/scaleway/testdata/k8s-cluster-basic.cassette.yaml
+++ b/scaleway/testdata/k8s-cluster-basic.cassette.yaml
@@ -577,9 +577,11 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"version":"1.23.0","upgrade_pools":true}'
     form: {}
     headers:
+      Content-Type:
+      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
