--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,7 +14,7 @@ jobs:
           - Account
           - AppleSilicon
           - Baremetal
-          - DomainRecord
+          - Domain
           - Instance
           - Iot
           - K8S
