--- a/scaleway/testdata/k8s-cluster-pool-wait.cassette.yaml
+++ b/scaleway/testdata/k8s-cluster-pool-wait.cassette.yaml
@@ -39,7 +39,7 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","type":"","name":"PoolConfigWait","description":"","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"version":"1.23.0","cni":"calico","enable_dashboard":false,"ingress":"unknown_ingress","pools":null,"autoscaler_config":{"scale_down_disabled":null,"scale_down_delay_after_add":null,"estimator":"unknown_estimator","expander":"unknown_expander","ignore_daemonsets_utilization":null,"balance_similar_node_groups":null,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":null,"scale_down_utilization_threshold":null,"max_graceful_termination_sec":0},"auto_upgrade":null,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":null,"apiserver_cert_sans":[]}'
+    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","type":"","name":"PoolConfigWait","description":"","tags":["terraform-test","scaleway_k8s_cluster","minimal"],"version":"1.23.1","cni":"calico","enable_dashboard":false,"ingress":"unknown_ingress","pools":null,"autoscaler_config":{"scale_down_disabled":null,"scale_down_delay_after_add":null,"estimator":"unknown_estimator","expander":"unknown_expander","ignore_daemonsets_utilization":null,"balance_similar_node_groups":null,"expendable_pods_priority_cutoff":0,"scale_down_unneeded_time":null,"scale_down_utilization_threshold":null,"max_graceful_termination_sec":0},"auto_upgrade":null,"feature_gates":[],"admission_plugins":[],"open_id_connect_config":null,"apiserver_cert_sans":[]}'
     form: {}
     headers:
       Content-Type:
@@ -3974,9 +3974,11 @@ interactions:
     code: 200
     duration: ""
 - request:
-    body: ""
+    body: '{"autoscaling":null,"size":2,"min_size":null,"max_size":2,"autohealing":null,"tags":null,"kubelet_args":null,"upgrade_policy":{"max_unavailable":null,"max_surge":null}}'
     form: {}
     headers:
+      Content-Type:
+      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
