--- a/.github/workflows/tfproviderlint.yml
+++ b/.github/workflows/tfproviderlint.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.0.0
-      - uses: bflad/tfproviderlint-github-action@v0.28.0
+      - uses: bflad/tfproviderlint-github-action@master
         with:
+          version: v0.28.0
           args: ./...
