--- a/.github/workflows/tfproviderlint.yml
+++ b/.github/workflows/tfproviderlint.yml
@@ -9,4 +9,5 @@ jobs:
       - uses: actions/checkout@v2.0.0
       - uses: bflad/tfproviderlint-github-action@master
         with:
+          version: v0.28.0
           args: ./...
