chore(deps): bump markdownlink v1.0.13 (#1091)

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      - uses: gaurav-nelson/github-action-markdown-link-check@1.0.13
         with:
           use-quiet-mode: 'yes'
           use-verbose-mode: 'yes'
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: avto-dev/markdown-lint@v1
+      - uses: avto-dev/markdown-lint@v1.5.0
         with:
           config: '.markdownlint.yml'
           args: 'docs'
